2022年7月6日，v4.7.5版本发布: 1、更新PDF.JS版本 新增批注功能,新增高亮显示调用参数&highlightAll= 2、升级spring-boot为2.71版本 3、针对OFFICE启动组件修整

--- a/server/src/main/resources/static/pdfjs/web/locale/be/viewer.properties
+++ b/server/src/main/resources/static/pdfjs/web/locale/be/viewer.properties
@@ -170,6 +170,7 @@ find_next.title=Знайсці наступны выпадак выразу
 find_next_label=Наступны
 find_highlight=Падфарбаваць усе
 find_match_case_label=Адрозніваць вялікія/малыя літары
+find_match_diacritics_label=З улікам дыякрытык
 find_entire_word_label=Словы цалкам
 find_reached_top=Дасягнуты пачатак дакумента, працяг з канца
 find_reached_bottom=Дасягнуты канец дакумента, працяг з пачатку
@@ -226,7 +227,7 @@ page_scale_percent={{scale}}%
 
 # Loading indicator messages
 loading=Чытаецца…
-loading_error=Здарылася памылка падчас загрузкі PDF.
+loading_error=Здарылася памылка ў часе загрузкі PDF.
 invalid_file_error=Няспраўны або пашкоджаны файл PDF.
 missing_file_error=Адсутны файл PDF.
 unexpected_response_error=Нечаканы адказ сервера.
@@ -248,3 +249,13 @@ password_cancel=Скасаваць
 printing_not_supported=Папярэджанне: друк не падтрымліваецца цалкам гэтым браўзерам.
 printing_not_ready=Увага: PDF не сцягнуты цалкам для друкавання.
 web_fonts_disabled=Шрыфты Сеціва забаронены: немагчыма ўжываць укладзеныя шрыфты PDF.
+
+# Editor
+editor_none.title=Адключыць рэдагаванне анатацый
+editor_none_label=Адключыць рэдагаванне
+editor_free_text.title=Дадаць анатацыю FreeText
+editor_free_text_label=Анатацыя FreeText
+editor_ink.title=Дадаць анатацыю чарнілам
+editor_ink_label=Анатацыя чарнілам
+
+freetext_default_content=Увядзіце тэкст…
