--- a/server/src/main/resources/static/pdfjs/web/locale/hu/viewer.properties
+++ b/server/src/main/resources/static/pdfjs/web/locale/hu/viewer.properties
@@ -170,6 +170,7 @@ find_next.title=A kifejezés következő előfordulásának keresése
 find_next_label=Tovább
 find_highlight=Összes kiemelése
 find_match_case_label=Kis- és nagybetűk megkülönböztetése
+find_match_diacritics_label=Diakritikus jelek
 find_entire_word_label=Teljes szavak
 find_reached_top=A dokumentum eleje elérve, folytatás a végétől
 find_reached_bottom=A dokumentum vége elérve, folytatás az elejétől
@@ -248,3 +249,13 @@ password_cancel=Mégse
 printing_not_supported=Figyelmeztetés: Ez a böngésző nem teljesen támogatja a nyomtatást.
 printing_not_ready=Figyelmeztetés: A PDF nincs teljesen betöltve a nyomtatáshoz.
 web_fonts_disabled=Webes betűkészletek letiltva: nem használhatók a beágyazott PDF betűkészletek.
+
+# Editor
+editor_none.title=Kommentárszerkesztés letiltása
+editor_none_label=Szerkesztés letiltása
+editor_free_text.title=FreeText kommentár hozzáadása
+editor_free_text_label=FreeText kommentár
+editor_ink.title=Tintajegyzet hozzáadása
+editor_ink_label=Tintajegyzet
+
+freetext_default_content=Írj be egy szöveget…
