--- a/server/src/main/resources/static/pdfjs/web/locale/es-MX/viewer.properties
+++ b/server/src/main/resources/static/pdfjs/web/locale/es-MX/viewer.properties
@@ -170,6 +170,7 @@ find_next.title=Ir a la siguiente frase encontrada
 find_next_label=Siguiente
 find_highlight=Resaltar todo
 find_match_case_label=Coincidir con mayúsculas y minúsculas
+find_match_diacritics_label=Coincidir diacríticos
 find_entire_word_label=Palabras completas
 find_reached_top=Se alcanzó el inicio del documento, se buscará al final
 find_reached_bottom=Se alcanzó el final del documento, se buscará al inicio
@@ -248,3 +249,13 @@ password_cancel=Cancelar
 printing_not_supported=Advertencia: La impresión no esta completamente soportada por este navegador.
 printing_not_ready=Advertencia: El PDF no cargo completamente para impresión.
 web_fonts_disabled=Las fuentes web están desactivadas: es imposible usar las fuentes PDF embebidas.
+
+# Editor
+editor_none.title=Deshabilitar la edición de anotaciones
+editor_none_label=Deshabilitar edición
+editor_free_text.title=Agregar anotación FreeText
+editor_free_text_label=Anotación FreeText
+editor_ink.title=Agregar anotación de tinta
+editor_ink_label=Anotación de tinta
+
+freetext_default_content=Ingresar algún texto…
