--- a/server/src/main/resources/static/pdfjs/web/locale/fr/viewer.properties
+++ b/server/src/main/resources/static/pdfjs/web/locale/fr/viewer.properties
@@ -170,6 +170,7 @@ find_next.title=Trouver la prochaine occurrence de l’expression
 find_next_label=Suivant
 find_highlight=Tout surligner
 find_match_case_label=Respecter la casse
+find_match_diacritics_label=Respecter les accents et diacritiques
 find_entire_word_label=Mots entiers
 find_reached_top=Haut de la page atteint, poursuite depuis la fin
 find_reached_bottom=Bas de la page atteint, poursuite au début
@@ -248,3 +249,13 @@ password_cancel=Annuler
 printing_not_supported=Attention : l’impression n’est pas totalement prise en charge par ce navigateur.
 printing_not_ready=Attention : le PDF n’est pas entièrement chargé pour pouvoir l’imprimer.
 web_fonts_disabled=Les polices web sont désactivées : impossible d’utiliser les polices intégrées au PDF.
+
+# Editor
+editor_none.title=Désactiver l’édition d’annotations
+editor_none_label=Désactiver l’édition
+editor_free_text.title=Ajouter du texte
+editor_free_text_label=Texte
+editor_ink.title=Dessiner
+editor_ink_label=Dessin
+
+freetext_default_content=Saisissez du texte…
