--- a/server/src/main/resources/static/pdfjs/web/locale/gn/viewer.properties
+++ b/server/src/main/resources/static/pdfjs/web/locale/gn/viewer.properties
@@ -170,6 +170,7 @@ find_next.title=Eho ñe’ẽ juhupyre upeiguávape
 find_next_label=Upeigua
 find_highlight=Embojekuaavepa
 find_match_case_label=Ejesareko taiguasu/taimichĩre
+find_match_diacritics_label=Diacrítico moñondive
 find_entire_word_label=Ñe’ẽ oĩmbáva 
 find_reached_top=Ojehupyty kuatia ñepyrũ, oku’ejeýta kuatia paha guive
 find_reached_bottom=Ojehupyty kuatia paha, oku’ejeýta kuatia ñepyrũ guive
@@ -248,3 +249,13 @@ password_cancel=Heja
 printing_not_supported=Kyhyjerã: Ñembokuatia ndojokupytypái ko kundahára ndive.
 printing_not_ready=Kyhyjerã: Ko PDF nahenyhẽmbái oñembokuatia hag̃uáicha.
 web_fonts_disabled=Ñanduti taity oñemongéma: ndaikatumo’ãi eipuru PDF jehai’íva taity.
+
+# Editor
+editor_none.title=Eipe’a jehaiha ñembosako’i
+editor_none_label=Eipe’a ñembosako’i
+editor_free_text.title=Embojuaju FreeText jehaiha
+editor_free_text_label=FreeTextjehaiha
+editor_ink.title=Embojuaju mbokuatiarã jehaiha
+editor_ink_label=Mbokuatiarã jehaiha
+
+freetext_default_content=Emoinge moñe’ẽrã…
