--- a/server/src/main/resources/static/pdfjs/web/locale/id/viewer.properties
+++ b/server/src/main/resources/static/pdfjs/web/locale/id/viewer.properties
@@ -61,6 +61,8 @@ cursor_text_select_tool_label=Alat Seleksi Teks
 cursor_hand_tool.title=Aktifkan Alat Tangan
 cursor_hand_tool_label=Alat Tangan
 
+scroll_page.title=Gunakan Pengguliran Laman
+scroll_page_label=Pengguliran Laman
 scroll_vertical.title=Gunakan Penggeseran Vertikal
 scroll_vertical_label=Penggeseran Vertikal
 scroll_horizontal.title=Gunakan Penggeseran Horizontal
@@ -168,6 +170,7 @@ find_next.title=Temukan lebih lanjut
 find_next_label=Selanjutnya
 find_highlight=Sorot semuanya
 find_match_case_label=Cocokkan BESAR/kecil
+find_match_diacritics_label=Pencocokan Diakritik
 find_entire_word_label=Seluruh teks
 find_reached_top=Sampai di awal dokumen, dilanjutkan dari bawah
 find_reached_bottom=Sampai di akhir dokumen, dilanjutkan dari atas
@@ -246,3 +249,13 @@ password_cancel=Batal
 printing_not_supported=Peringatan: Pencetakan tidak didukung secara lengkap pada peramban ini.
 printing_not_ready=Peringatan: Berkas PDF masih belum dimuat secara lengkap untuk dapat dicetak.
 web_fonts_disabled=Font web dinonaktifkan: tidak dapat menggunakan font PDF yang tersemat.
+
+# Editor
+editor_none.title=Nonaktifkan Penyuntingan Anotasi
+editor_none_label=Nonaktifkan Penyuntingan
+editor_free_text.title=Tambahkan Notasi FreeText
+editor_free_text_label=Notasi FreeText
+editor_ink.title=Tambahkan Notasi Tinta
+editor_ink_label=Notasi Tinta
+
+freetext_default_content=Masukkan beberapa teks…
