--- a/server/src/main/resources/static/pdfjs/web/locale/it/viewer.properties
+++ b/server/src/main/resources/static/pdfjs/web/locale/it/viewer.properties
@@ -139,6 +139,7 @@ find_next.title = Trova l’occorrenza successiva del testo da cercare
 find_next_label = Successivo
 find_highlight = Evidenzia
 find_match_case_label = Maiuscole/minuscole
+find_match_diacritics_label = Segni diacritici
 find_entire_word_label = Parole intere
 find_reached_top = Raggiunto l’inizio della pagina, continua dalla fine
 find_reached_bottom = Raggiunta la fine della pagina, continua dall’inizio
@@ -190,3 +191,13 @@ password_cancel = Annulla
 printing_not_supported = Attenzione: la stampa non è completamente supportata da questo browser.
 printing_not_ready = Attenzione: il PDF non è ancora stato caricato completamente per la stampa.
 web_fonts_disabled = I web font risultano disattivati: impossibile utilizzare i caratteri incorporati nel PDF.
+
+# Editor
+editor_none.title = Disattiva modifica annotazioni
+editor_none_label = Disattiva modifica
+editor_free_text.title = Aggiungi annotazione testo libero
+editor_free_text_label = Annotazione testo libero
+editor_ink.title = Aggiungi annotazione a penna
+editor_ink_label = Annotazione a penna
+
+freetext_default_content = Inserisci del testo…
