--- a/server/src/main/resources/static/pdfjs/web/locale/ko/viewer.properties
+++ b/server/src/main/resources/static/pdfjs/web/locale/ko/viewer.properties
@@ -41,7 +41,7 @@ print.title=인쇄
 print_label=인쇄
 download.title=다운로드
 download_label=다운로드
-bookmark.title=현재 보기 (복사 또는 새 창에 열기)
+bookmark.title=현재 보기 (복사 또는 새 창에서 열기)
 bookmark_label=현재 보기
 
 # Secondary toolbar and context menu
@@ -170,6 +170,7 @@ find_next.title=지정 문자열에 일치하는 다음 부분을 검색
 find_next_label=다음
 find_highlight=모두 강조 표시
 find_match_case_label=대/소문자 구분
+find_match_diacritics_label=분음 부호 일치
 find_entire_word_label=단어 단위로
 find_reached_top=문서 처음까지 검색하고 끝으로 돌아와 검색했습니다.
 find_reached_bottom=문서 끝까지 검색하고 앞으로 돌아와 검색했습니다.
@@ -248,3 +249,13 @@ password_cancel=취소
 printing_not_supported=경고: 이 브라우저는 인쇄를 완전히 지원하지 않습니다.
 printing_not_ready=경고: 이 PDF를 인쇄를 할 수 있을 정도로 읽어들이지 못했습니다.
 web_fonts_disabled=웹 폰트가 비활성화됨: 내장된 PDF 글꼴을 사용할 수 없습니다.
+
+# Editor
+editor_none.title=주석 편집 비활성화
+editor_none_label=편집 비활성화
+editor_free_text.title=FreeText 주석 추가
+editor_free_text_label=FreeText 주석
+editor_ink.title=잉크 주석 추가
+editor_ink_label=잉크 주석
+
+freetext_default_content=텍스트를 입력하세요…
