--- a/server/src/main/resources/static/pdfjs/web/locale/nl/viewer.properties
+++ b/server/src/main/resources/static/pdfjs/web/locale/nl/viewer.properties
@@ -170,6 +170,7 @@ find_next.title=De volgende overeenkomst van de tekst zoeken
 find_next_label=Volgende
 find_highlight=Alles markeren
 find_match_case_label=Hoofdlettergevoelig
+find_match_diacritics_label=Diakritische tekens gebruiken
 find_entire_word_label=Hele woorden
 find_reached_top=Bovenkant van document bereikt, doorgegaan vanaf onderkant
 find_reached_bottom=Onderkant van document bereikt, doorgegaan vanaf bovenkant
@@ -248,3 +249,13 @@ password_cancel=Annuleren
 printing_not_supported=Waarschuwing: afdrukken wordt niet volledig ondersteund door deze browser.
 printing_not_ready=Waarschuwing: de PDF is niet volledig geladen voor afdrukken.
 web_fonts_disabled=Weblettertypen zijn uitgeschakeld: gebruik van ingebedde PDF-lettertypen is niet mogelijk.
+
+# Editor
+editor_none.title=Bewerken van annotaties uitschakelen
+editor_none_label=Bewerken uitschakelen
+editor_free_text.title=FreeText-annotatie toevoegen
+editor_free_text_label=FreeText-annotatie
+editor_ink.title=Ink-annotatie toevoegen
+editor_ink_label=Ink-annotatie
+
+freetext_default_content=Voer wat tekst in…
