--- a/server/src/main/resources/static/pdfjs/web/locale/nn-NO/viewer.properties
+++ b/server/src/main/resources/static/pdfjs/web/locale/nn-NO/viewer.properties
@@ -170,6 +170,7 @@ find_next.title=Finn neste førekomst av frasen
 find_next_label=Neste
 find_highlight=Uthev alle
 find_match_case_label=Skil store/små bokstavar
+find_match_diacritics_label=Samsvar diakritiske teikn
 find_entire_word_label=Heile ord
 find_reached_top=Nådde toppen av dokumentet, fortset frå botnen
 find_reached_bottom=Nådde botnen av dokumentet, fortset frå toppen
@@ -248,3 +249,7 @@ password_cancel=Avbryt
 printing_not_supported=Åtvaring: Utskrift er ikkje fullstendig støtta av denne nettlesaren.
 printing_not_ready=Åtvaring: PDF ikkje fullstendig innlasta for utskrift.
 web_fonts_disabled=Web-skrifter er slått av: Kan ikkje bruke innbundne PDF-skrifter.
+
+# Editor
+
+freetext_default_content=Skriv inn litt tekst…
