--- a/server/src/main/resources/static/pdfjs/web/locale/pt-PT/viewer.properties
+++ b/server/src/main/resources/static/pdfjs/web/locale/pt-PT/viewer.properties
@@ -170,6 +170,7 @@ find_next.title=Localizar ocorrência seguinte da frase
 find_next_label=Seguinte
 find_highlight=Destacar tudo
 find_match_case_label=Correspondência
+find_match_diacritics_label=Corresponder diacríticos
 find_entire_word_label=Palavras completas
 find_reached_top=Topo do documento atingido, a continuar a partir do fundo
 find_reached_bottom=Fim do documento atingido, a continuar a partir do topo
@@ -248,3 +249,13 @@ password_cancel=Cancelar
 printing_not_supported=Aviso: a impressão não é totalmente suportada por este navegador.
 printing_not_ready=Aviso: o PDF ainda não está totalmente carregado.
 web_fonts_disabled=Os tipos de letra web estão desativados: não é possível utilizar os tipos de letra PDF embutidos.
+
+# Editor
+editor_none.title=Desativar Edição de Anotações
+editor_none_label=Desativar Edição
+editor_free_text.title=Adicionar Anotação FreeText
+editor_free_text_label=Anotação FreeText
+editor_ink.title=Adicionar Anotação a Tinta
+editor_ink_label=Anotação a Tinta
+
+freetext_default_content=Introduza algum texto…
