--- a/server/src/main/resources/static/pdfjs/web/locale/tr/viewer.properties
+++ b/server/src/main/resources/static/pdfjs/web/locale/tr/viewer.properties
@@ -170,6 +170,7 @@ find_next.title=Sonraki eşleşmeyi bul
 find_next_label=Sonraki
 find_highlight=Tümünü vurgula
 find_match_case_label=Büyük-küçük harfe duyarlı
+find_match_diacritics_label=Fonetik işaretleri bul
 find_entire_word_label=Tam sözcükler
 find_reached_top=Belgenin başına ulaşıldı, sonundan devam edildi
 find_reached_bottom=Belgenin sonuna ulaşıldı, başından devam edildi
@@ -248,3 +249,13 @@ password_cancel=İptal
 printing_not_supported=Uyarı: Yazdırma bu tarayıcı tarafından tam olarak desteklenmemektedir.
 printing_not_ready=Uyarı: PDF tamamen yüklenmedi ve yazdırmaya hazır değil.
 web_fonts_disabled=Web fontları devre dışı: Gömülü PDF fontları kullanılamıyor.
+
+# Editor
+editor_none.title=Açıklama düzenlemeyi kapat
+editor_none_label=Düzenlemeyi kapat
+editor_free_text.title=FreeText açıklaması ekle
+editor_free_text_label=FreeText açıklaması
+editor_ink.title=Mürekkep açıklaması ekle
+editor_ink_label=Mürekkep açıklaması
+
+freetext_default_content=Bir metin girin…
