--- a/server/src/main/resources/static/pdfjs/web/locale/vi/viewer.properties
+++ b/server/src/main/resources/static/pdfjs/web/locale/vi/viewer.properties
@@ -170,6 +170,7 @@ find_next.title=Tìm cụm từ ở phần sau
 find_next_label=Tiếp
 find_highlight=Tô sáng tất cả
 find_match_case_label=Phân biệt hoa, thường
+find_match_diacritics_label=Khớp dấu phụ
 find_entire_word_label=Toàn bộ từ
 find_reached_top=Đã đến phần đầu tài liệu, quay trở lại từ cuối
 find_reached_bottom=Đã đến phần cuối của tài liệu, quay trở lại từ đầu
@@ -248,3 +249,13 @@ password_cancel=Hủy bỏ
 printing_not_supported=Cảnh báo: In ấn không được hỗ trợ đầy đủ ở trình duyệt này.
 printing_not_ready=Cảnh báo: PDF chưa được tải hết để in.
 web_fonts_disabled=Phông chữ Web bị vô hiệu hóa: không thể sử dụng các phông chữ PDF được nhúng.
+
+# Editor
+editor_none.title=Tắt chỉnh sửa chú thích
+editor_none_label=Tắt chỉnh sửa
+editor_free_text.title=Thêm chú thích FreeText
+editor_free_text_label=Chú thích FreeText
+editor_ink.title=Thêm chú thích mực
+editor_ink_label=Chú thích mực
+
+freetext_default_content=Nhập vài văn bản…
