--- a/server/src/main/resources/static/pdfjs/web/locale/zh-CN/viewer.properties
+++ b/server/src/main/resources/static/pdfjs/web/locale/zh-CN/viewer.properties
@@ -170,6 +170,7 @@ find_next.title=查找词语后一次出现的位置
 find_next_label=下一页
 find_highlight=全部高亮显示
 find_match_case_label=区分大小写
+find_match_diacritics_label=匹配变音符号
 find_entire_word_label=字词匹配
 find_reached_top=到达文档开头，从末尾继续
 find_reached_bottom=到达文档末尾，从开头继续
@@ -248,3 +249,13 @@ password_cancel=取消
 printing_not_supported=警告：此浏览器尚未完整支持打印功能。
 printing_not_ready=警告：此 PDF 未完成载入，无法打印。
 web_fonts_disabled=Web 字体已被禁用：无法使用嵌入的 PDF 字体。
+
+# Editor
+editor_none.title=禁用编辑注释
+editor_none_label=禁用编辑
+editor_free_text.title=添加自由文本注释
+editor_free_text_label=自由文本注释
+editor_ink.title=添加墨迹注释
+editor_ink_label=墨迹注释
+
+freetext_default_content=输入一段文本…
